--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="icon" type="image/png" href="/todolisticon-16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/todolisticon-24.png" sizes="24x24">
-    <link rel="icon" type="image/png" href="/todolisticon-32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="images/todolisticon-16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="images/todolisticon-24.png" sizes="24x24">
+    <link rel="icon" type="image/png" href="images/todolisticon-32.png" sizes="32x32">
     <meta charset="utf-8">
     <title>To Do List</title>
   </head>
